[package]
name = "neto"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pas2rust/neto"
readme = "README.md"
exclude = [
    "tests/*",
    "tests",
    "main.rs"
]
categories = ["web-programming", "api-bindings", "network-programming"]
description = "Enhanced HTTP client API wrapper for reqwest with improved ergonomics"
keywords = ["http", "client", "reqwest", "api", "web", "rest"]
authors = ["pas2rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/neto"
documentation = "https://docs.rs/neto"

[dependencies]